970-api-services-beans/src/test/resources/smi/HTTPRouteGroupMethodTest.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: HTTPRouteGroup
metadata:
  name: smi-http-route
spec:
  matches:
  - methods:
    - GET
    - POST
    name: smi-http-method-1
