970-api-services-beans/src/test/resources/smi/HTTPRouteGroupUriTest.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: HTTPRouteGroup
metadata:
  name: smi-http-route
spec:
  matches:
  - name: smi-http-uri-1
    pathRegex: /metrics
