970-api-services-beans/src/test/resources/smi/UDPRouteTest.yaml
apiVersion: specs.smi-spec.io/v1alpha3
kind: UDPRoute
metadata:
  name: smi-udp-route
spec:
  matches:
  - name: smi-udp-port-rule-1
    ports:
    - 7890
    - 444
